--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,5 @@
 name: CI
 
-#on: [push]
-
 # 在master分支发生push事件时触发。
 on: 
   push:
@@ -14,7 +12,7 @@ jobs: # 工作流
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [12.x]
 
     steps: # 步骤
       - name: Checkout # 步骤1
@@ -22,7 +20,7 @@ jobs: # 工作流
         uses: QianyizzZ/notes
       
       - name: Use Node.js ${{ matrix.node-version }} # 步骤2
-        uses: actions/setup-node@v1 # 作用：安装nodejs
+        uses: QianyizzZ/setup-node@v1 # 作用：安装nodejs
         with:
           node-version: ${{ matrix.node-version }} # 版本
 #-------------------------------------------------------------------      
