--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 jobs: # 工作流
   build: # 自定义名称
@@ -23,30 +26,10 @@ jobs: # 工作流
         uses: QianyizzZ/setup-node@v1 # 作用：安装nodejs
         with:
           node-version: ${{ matrix.node-version }} # 版本
-#-------------------------------------------------------------------      
-#      - name: Configure Private Key #★★★★★★ 步骤3：设置ssh ★★★★★★
-#        env:
-#          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }} # gitee的ssh
-#        run: |
-#          mkdir -p ~/.ssh
-#          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-#          chmod 600 ~/.ssh/id_rsa
-#          echo "StrictHostKeyChecking no" >> ~/.ssh/config
-#      - name: Push Gitee Mirror  #★★★★★★ 步骤4：推送到gitee★★★★★★
-#        env:
-#          SOURCE_REPO: 'https://github.com/oddfar/notes.git'    #github 仓库地址
-#          DESTINATION_REPO: 'git@gitee.com:oddfar/notes.git'    #gitee 仓库地址
-#        run: |
-#          git clone --mirror "$SOURCE_REPO" && cd `basename "$SOURCE_REPO"`
-#          git remote set-url --push origin "$DESTINATION_REPO"
-#          git fetch -p origin
-#          git for-each-ref --format 'delete %(refname)' refs/pull | git update-ref --stdin
-#          git push --mirror
-#-------------------------------------------------------------------   
+
       - name: run deploy.sh # 步骤5：执行脚本deploy.sh
         env: # 设置环境变量，未设置则不运行
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
-          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }} # gitee的ssh
 
         run: npm install && npm run deploy
         
